<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="#00b8ff">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="3dp"
            android:layout_gravity="center_horizontal|top"
            android:gravity="top">



            <Button android:id="@+id/button_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_send"
                android:onClick="sendMessage" />


            <Button android:id="@+id/btnCamera"
                android:text="@string/btnCamera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="launchCamera" />


            <Button android:id="@+id/btnCapture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/capture"  />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="fill_horizontal">

            <EditText android:id="@+id/edit_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_message"
                android:layout_gravity="center_horizontal"
                android:textColor="#FFFF9600"
                android:textColorHint="#FFFF9600"
                android:textColorHighlight="#FFFF9600"
                android:drawableTint="#FFFF9600"
                android:singleLine="true"
                android:shadowColor="#ffffff" />
        </LinearLayout>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
            android:background="#60dbff"
            android:gravity="bottom">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:id="@+id/imageView"
                android:layout_weight="1" />
        </LinearLayout>

    </LinearLayout>


</FrameLayout>
