<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#303030">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

        <ViewFlipper
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/viewFlipper" >

            <LinearLayout
                android:background="#303030"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="20dp"
                android:weightSum="1"
                android:id="@+id/sign_first">

                <RelativeLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:baselineAligned="true">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:hint="Name"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:ems="10"
                        android:id="@+id/sg_txtName"
                        android:layout_gravity="center_horizontal"
                        android:textColor="#ffecca"
                        android:theme="@style/Theme.App.Base"
                        android:textColorHint="#ffecca" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:hint="Surname"
                        android:ems="10"
                        android:id="@+id/sg_txtSurname"
                        android:layout_gravity="center_horizontal"
                        android:textColor="#ffecca"
                        android:theme="@style/Theme.App.Base"
                        android:layout_below="@+id/sg_txtName"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:textColorHint="#ffecca" />

                    <TextView
                        android:background="@drawable/top_border_background_light"
                        android:paddingTop="10dp"
                        android:layout_width="fill_parent"
                        android:layout_height="80dp"
                        android:id="@+id/tut_text_page_5"
                        android:text="@string/sg_ownerCredDesc"
                        android:textColor="#ffb252"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentBottom="true" />

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout android:id="@+id/sg_layout_create_pug"
                android:background="#303030"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="250dp"
                        android:layout_height="250dp"
                        android:id="@+id/sg_create_pug_image"
                        android:layout_gravity="center_horizontal" />

                    <Button android:id="@+id/sg_btn_capture"
                        android:layout_width="100dp"
                        android:layout_height="50dp"
                        android:text="CAPTURE"
                        android:layout_gravity="center_horizontal" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:background="#303030"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp"
                android:baselineAligned="true">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="100dp"
                        android:id="@+id/tut_text_page_2"
                        android:text="@string/tut_text_page_1"
                        android:layout_gravity="center|top"
                        android:textColor="#ffb252"/>

                    <EditText android:id="@+id/sg_pugName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/Theme.App.Base"
                        android:hint="Pug Name"
                        android:textColor="#ffecca"
                        android:textColorHint="#ffecca"
                        android:inputType="textPersonName" />

                    <EditText android:id="@+id/sg_pugCity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/Theme.App.Base"
                        android:hint="Where he/she lives"
                        android:textColor="#ffecca"
                        android:textColorHint="#ffecca"
                        android:inputType="textPersonName" />

                    <EditText
                        android:id="@+id/sg_pugPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/Theme.App.Base"
                        android:hint="Password"
                        android:textColor="#ffecca"
                        android:textColorHint="#ffecca"
                        android:password="true"
                        android:inputType="textPersonName" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:background="#303030"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp"
                android:orientation="vertical"
                android:weightSum="1">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="215dp"
                    android:weightSum="1">

                    <ToggleButton
                        android:layout_width="128dp"
                        android:background="@drawable/check"
                        android:layout_height="128dp"
                        android:id="@+id/sg_toggle"
                        android:layout_gravity="center_horizontal"
                        android:textOn=""
                        android:textOff="" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="215dp"
                    android:layout_gravity="bottom"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sg_ownerOrVisit_title"
                        android:id="@+id/sg_ownerOrVisit_title"
                        android:textColor="#fff1e3"
                        android:textSize="25dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="15dp" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:id="@+id/tut_text_page_4"
                        android:text="@string/sg_ownerOrVisit_body"
                        android:textColor="#ffb252"
                        android:layout_weight="0.60" />
                </LinearLayout>

            </LinearLayout>


        </ViewFlipper>

    </LinearLayout>
</FrameLayout>